# opencode-sessions

./: .gitignore  .lore.json  20260407-summary-session-0.md  AGENTS.md  AGENTS.md.bak  Justfile  Step_1_working.md  pyproject.toml  request2.md  review.todo.md  sbom.potential.md  session-ses_291e.md  step_1_working.md  step_2_1_working.md  step_2_2_item_10.md  step_2_2_item_8_1.md  step_2_2_working.md  step_2_3_working.md  step_2_4_working.md  vsm_wiki.md
.claude/handoffs/: 2026-04-09-001643-ports-table.md  2026-04-10-161051-continue-ports-table.md  2026-04-11-105425-continuing-review.md  2026-04-12-195114-ports-implementation.md
.opencode/commands/: discover.md  plan-roadmap.md  prioritize.md  write-prd.md
core/: event.py  time.py
design_docs/: EPIC_1_PRD.md  ROADMAP.md  VSM_PRD.md  architecture_layers.md  delivery_slices.md  epic_1_gap_analysis.md  epic_hypotheses.md  prioritization_choice.md  review.todo.md  review_concerns.md  roadmap-do-not-use.md  roadmap_context.md  sbom.potential.md  session-ses_2830.md  step_1.omissions.md  step_1_working.md  step_2_4_working.md  step_3_working.md
src/ports/: __init__.py  event_bus_port.py
tests/: test_ports.py
vsm/adapters/: in_memory_turn_manager.py  in_process_bus.py  local_llm_adapter.py  local_tool_registry.py  simple_trigger_engine.py  yaml_config_loader.py  yaml_file_store.py  yaml_memory_adapter.py  yaml_rule_adapter.py
vsm/ports/: __init__.py  clock_port.py  config_port.py  event_bus_port.py  llm_port.py  memory_port.py  persistence_port.py  port_factory.py  rule_port.py  scheduler_port.py  tool_port.py  (+1 more)
